# pyrust_clean

./: .gitignore  Cargo.toml  LICENSE.txt  README  setup.py
pyrust.egg-info/: PKG-INFO  SOURCES.txt
src/: fibonacci.rs  testlibrary.rs
