[package]
name = "pyrust"
version = "0.1.0"
edition = "2024"

[lib]
name = "pyrust"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
path = "src/testlibrary.rs"

[dependencies]

[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
